k8s/stage/bankai-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankai-api-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - sepolia.bankai.herodotus.cloud
      secretName: bankai-api-tls
  rules:
    - host: sepolia.bankai.herodotus.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bankai-api-service
                port:
                  number: 8080
